# internal/model/constellationPlanet.go
@@ -1,6 +1,6 @@
 package model
 
 type ConstellationPlanet struct {
-	ConstellationID uint `gorm:"type:serial;primaryKey;index" json:"constellation_id"`
-	PlanetID        uint `gorm:"type:serial;primaryKey;index" json:"planet_id"`
+	ConstellationID uint `gorm:"type:serial;primaryKey;index" json:"constellationId"`
+	PlanetID        uint `gorm:"type:serial;primaryKey;index" json:"planetId"`
 }
